Lasso Time Series

--- a/Time Series Lasso/Previous Drafts/time_series_preferred_specs.ipynb
+++ b/Time Series Lasso/Previous Drafts/time_series_preferred_specs.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'C:/Users/georg/Documents/JHU/Theory of ML/Group Project/'\n",
+    "path = 'https:\\\\github.com\\tracesauter\\news-financial-sentiment\\tree\\Time Series Lasso\\\"\n",
     "file = path + 'data_with_doc2vec.csv'"
    ]
   },
