Tested with fewer features

--- a/Time Series Lasso/time_series_with_macro.ipynb
+++ b/Time Series Lasso/time_series_with_macro.ipynb
@@ -23,13 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e97be53e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'https:\\\\github.com\\tracesauter\\news-financial-sentiment\\tree\\Time Series Lasso\\\"\n",
-    "file = path + 'data_with_doc2vec.csv'"
+    "df = pd.read_csv('data_with_doc2vec.csv')"
    ]
   },
   {
@@ -4400,6 +4399,14 @@
    "source": [
     "X_weighted.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3139db0-435a-4097-b63d-46bb23c9f957",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
